[package]
name = "hotlap"
version = "0.1.0"
authors = ["Matt Robineau <matthieu.robineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.15", default-features = false, features = ['crossterm']}
